@@ -1,5 +1,8 @@
 package dev.iyanz.sourbycraft.brand;
 
+import dev.iyanz.sourbycraft.SourbyCraftColors;
+import net.kyori.adventure.text.format.TextColor;
+
 import java.lang.management.ManagementFactory;
 import java.util.ArrayList;
 import java.util.List;
@@ -12,27 +15,38 @@ import java.util.List;
  *
  * <p>Gated by baked key {@code branding.gc-advisor.enabled} (default {@code true}).
  * When disabled the advisor short-circuits and returns an "acceptable" result with no
- * warnings so callers need no changes. (S5 binding.)
+ * warnings so callers need no changes.
+ *
+ * <p>Ported from the Paper tag {@code paper-26.2-pre-folia}; the warning banner is now
+ * colored with ANSI 24-bit truecolor derived from {@link SourbyCraftColors#WARNING}.
  */
 public final class GcAdvisor {
 
     public record Result(boolean acceptable, List<String> warnings) {}
 
     /**
-     * S5: loaded from JAR-baked sourbycraft.yml {@code branding.gc-advisor.enabled}.
-     * Safe to read at class-init time — SourbyCraftConfig.sourbycraftYmlBaseline is a
-     * static field loaded immediately when SourbyCraftConfig class is first referenced.
+     * Read from the unified TOML key {@code branding.gc-advisor.enabled} (default {@code true}).
      */
-    public static final boolean ENABLED =
-        dev.iyanz.sourbycraft.SourbyCraftConfig.ymlBool("branding.gc-advisor.enabled", true);
+    // Read lazily, NOT in a static final: class-init can precede unified-config load, which
+    // would latch the operator's setting to the default for the whole boot.
+    private static boolean enabled() {
+        return dev.iyanz.sourbycraft.SourbyCraftConfig.cfgBool("branding.gc-advisor.enabled", true);
+    }
+
+    private static final String ESC = "\u001B";
+    private static final String RESET = ESC + "[0m";
+
+    private static String fg(TextColor c) {
+        return ESC + "[38;2;" + c.red() + ";" + c.green() + ";" + c.blue() + "m";
+    }
 
     private GcAdvisor() {}
 
     public static Result run() {
-        // S5: gate — if operator disabled gc-advisor in baked yml, skip.
-        if (!ENABLED) {
+        // gate — if operator disabled gc-advisor in baked yml, skip.
+        if (!enabled()) {
             dev.iyanz.sourbycraft.util.SourbyLogger.info(
-                "[SourbyCraft] gc-advisor disabled via branding.gc-advisor.enabled=false");
+                "gc-advisor disabled via branding.gc-advisor.enabled=false");
             return new Result(true, List.of());
         }
         List<String> gcNames = ManagementFactory.getGarbageCollectorMXBeans().stream()
@@ -43,18 +57,30 @@ public final class GcAdvisor {
         return evaluate(gcNames, jvmArgs, xms, xmx);
     }
 
+    /**
+     * Modern (Java 25 / ZGC-era) evaluation. Only flags that ACTIVELY hurt are warned about —
+     * the old advice (AlwaysPreTouch, Xms=Xmx, ZGenerational, UseLargePages) is retired: it
+     * pins the whole heap resident from tick 0 (panels chart that as "RAM usage"), blocks ZGC
+     * uncommit, and ZGenerational was removed in JDK 24 (ZGC is generational by default).
+     */
     public static Result evaluate(List<String> gcNames, List<String> jvmArgs, long xms, long xmx) {
         List<String> warns = new ArrayList<>();
         boolean isZgc = gcNames.stream().anyMatch(n -> n.contains("ZGC"));
         boolean isG1 = gcNames.stream().anyMatch(n -> n.contains("G1"));
         if (!isZgc && !isG1) {
-            warns.add("GC is not ZGC or G1 — detected: " + gcNames + ". Recommended: -XX:+UseZGC -XX:+ZGenerational");
+            warns.add("GC is " + gcNames + " — use -XX:+UseZGC (low-pause, uncommits idle heap).");
         }
-        if (xms > 0 && xmx > 0 && xms != xmx) {
-            warns.add("Xms != Xmx (Xms=" + xms + "MB, Xmx=" + xmx + "MB). Set them equal to avoid heap resize pauses.");
+        if (jvmArgs.stream().anyMatch(a -> a.startsWith("-XX:+ZGenerational"))) {
+            warns.add("-XX:+ZGenerational was REMOVED in JDK 24 — drop the flag (ZGC is generational by default).");
         }
-        if (jvmArgs.stream().noneMatch(a -> a.contains("AlwaysPreTouch"))) {
-            warns.add("Missing -XX:+AlwaysPreTouch — recommended for predictable tick latency.");
+        if (isZgc && jvmArgs.stream().anyMatch(a -> a.startsWith("-XX:+AlwaysPreTouch"))) {
+            warns.add("-XX:+AlwaysPreTouch pins the ENTIRE heap resident from boot — drop it so idle heap returns to the OS.");
+        }
+        if (isZgc && jvmArgs.stream().noneMatch(a -> a.startsWith("-XX:ZUncommitDelay"))) {
+            warns.add("Add -XX:ZUncommitDelay=60 so ZGC returns idle heap pages to the OS quickly.");
+        }
+        if (xms > 0 && xmx > 0 && xms == xmx && xmx >= 4096) {
+            warns.add("-Xms equal to -Xmx commits the full heap up-front — use a small -Xms (e.g. 2G) and let it grow.");
         }
         return new Result(warns.isEmpty(), warns);
     }
@@ -74,23 +100,17 @@ public final class GcAdvisor {
         return 0;
     }
 
+    /** Compact WARN lines instead of the old box banner (whose advice was outdated anyway). */
     public static String renderWarningBanner(Result r) {
         if (r.acceptable()) return "";
+        final String w = fg(SourbyCraftColors.WARNING);
         StringBuilder sb = new StringBuilder();
-        sb.append("╔══════════════════════════════════════════════════╗\n");
-        sb.append("║  ⚠  SourbyCraft tuned for ZGC generational       ║\n");
-        sb.append("╠══════════════════════════════════════════════════╣\n");
-        for (String w : r.warnings()) {
-            String line = w.length() > 46 ? w.substring(0, 43) + "..." : w;
-            sb.append(String.format("║  %-46s║%n", line));
+        sb.append(w).append("[SourbyCraft] JVM flag advisor:").append(RESET).append('\n');
+        for (String warn : r.warnings()) {
+            sb.append(w).append("[SourbyCraft]   - ").append(warn).append(RESET).append('\n');
         }
-        sb.append("║                                                  ║\n");
-        sb.append("║  Recommended JVM args:                           ║\n");
-        sb.append("║    -XX:+UseZGC -XX:+ZGenerational                ║\n");
-        sb.append("║    -XX:+AlwaysPreTouch                           ║\n");
-        sb.append("║    -XX:+UseLargePages                            ║\n");
-        sb.append("║    -Xms=Xmx (same value)                         ║\n");
-        sb.append("╚══════════════════════════════════════════════════╝\n");
+        sb.append(w).append("[SourbyCraft]   Recommended (Java 25): -Xms2G -Xmx<75-85% of allocation> "
+            + "-XX:+UseZGC -XX:ZUncommitDelay=60 --add-modules=jdk.incubator.vector").append(RESET).append('\n');
         return sb.toString();
     }
 }
